<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Workout">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#14EE8300"
            android:orientation="vertical">

            <TextView
                android:id="@+id/workout_subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="10sp"
                android:paddingBottom="10sp"
                android:text="@string/workout_subheading"
                android:textAlignment="center"
                android:textColor="#E308A4"
                android:textSize="20sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/workout_image"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/workout_pregnant_woman" />

            <TextView
                android:id="@+id/workout_article"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="casual"
                android:text="@string/workout_article"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/workout_article2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="casual"
                android:text="@string/workout_article2"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/workout_yoga_pregnant_woman"
                android:layout_width="match_parent"
                android:layout_height="319dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/workout_yoga_pregnant_woman" />

            <TextView
                android:id="@+id/workout_article3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="casual"
                android:text="@string/workout_article3"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="201dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/planks" />

            <TextView
                android:id="@+id/workout_article4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="casual"
                android:text="@string/workout_article4"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/workout_bodyweight_pregnant_woman"
                android:layout_width="match_parent"
                android:layout_height="319dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/workout_bodyweight_pregnant_woman" />

            <TextView
                android:id="@+id/workout_article5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:fontFamily="casual"
                android:text="@string/workout_article5"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/workout_supine_pregnant_woman"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/workout_supine_pregnant_woman" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:layout_marginRight="20sp"
                android:fontFamily="casual"
                android:text="@string/workout_article6"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/app_name"
                android:layout_marginBottom="20sp"
                android:src="@drawable/pregnant_woman_catyoga" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>